<resources>
    <string name="app_name">Playme</string>
    <string name="search_song">What do you want to listen to?</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="library">Library</string>
    <string name="login">Log in</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="signup">Sign up</string>
    <string name="contiune_with_google">Contiune with Google</string>
    <string name="suggested_artists">Suggested artists</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="whats_your_name">What\'s your name?</string>
    <string name="whats_your_email">What\'s your email?</string>
    <string name="should_confirm_this_later">You\'ll need to confirm this later.</string>
    <string name="next">Next</string>
    <string name="create_password">Create a password</string>
    <string name="atleast_eightcharacters">Use at least 8 characters.</string>
    <string name="whats_your_birthdate">What\'s your date of birth?</string>
    <string name="whats_your_gender">What\'s your gender?</string>
    <string name="non_binary">Non binary</string>
    <string name="this_appears_on_your_profile">This appears on your profile.</string>
    <string name="create_account">Create account</string>
    <string name="agree_to_terms_of_use_and_privacy_policy">By tapping \"create account\" you agree to our Terms\nof Use and Privacy Policy.</string>
    <string name="reset_link_be_sent">Reset link will be sent to your email</string>
    <string name="send_link">Send link</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="password_recovery">Password recovery</string>
    <string name="days_playlists">Playlists of the Day</string>
    <string name="music">Music</string>
    <string name="podcasts">Podcasts</string>
    <string name="goodafternoon">Good afternoon</string>
    <string name="browse_all">Browse all</string>
    <string name="getting_started_message">Loads of songs.\nWe play. You enjoy.</string>
    <string name="top_albums">Top albums</string>
    <string name="follow">Follow</string>
    <string name="example_playlist_songs">JACKBOYS OUT WEST (feat. Young Thug) • Tiesto Hot In It • David Guetta Impossible (feat. John Martin) • Latto Wheelie (feat. 21 Savage) • and more</string>
    <string name="search_text_1">Play what you love</string>
    <string name="search_text_2">Search for artists, songs podcasts and more.</string>
    <string name="privew">Preview</string>
    <string name="napster">Napster</string>
    <string name="web_client_id">685546951646-li4qplngjhkgojsipf1391vvirdbshet.apps.googleusercontent.com</string>
    <string name="library_greet_text1">Add music and podcasts</string>
    <string name="library_greet_text2">Collect your favorites so you can listen whenever you want</string>
    <string name="edit">Edit</string>


</resources>