<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.authenticationScreens.registerScreens.CreateAccountFourthScreenFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/tv_user_register_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/publica_play_regular"
        android:gravity="start|center"
        android:text="@string/whats_your_gender"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_85"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_5"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_10" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_95"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_5"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_register_email">

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_85"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_15">

            <RadioButton
                android:id="@+id/rbtn_gender_female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:textColor="@color/radiobutton_text_color"
                android:layout_weight="0.6"
                android:stateListAnimator="@animator/buttons_ontouch_animator"
                android:foreground="@drawable/foreground_on_view_press_dark"
                android:background="@drawable/background_radiobuttons"
                android:button="@null"
                android:gravity="center"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="20sp"
                android:text="@string/female"/>

            <RadioButton
                android:id="@+id/rbtn_gender_male"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="0.4"
                android:background="@drawable/background_radiobuttons"
                android:button="@null"
                android:stateListAnimator="@animator/buttons_ontouch_animator"
                android:foreground="@drawable/foreground_on_view_press_dark"
                android:textColor="@color/radiobutton_text_color"
                android:text="@string/male"
                android:gravity="center"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="20sp"
                />

            <RadioButton
                android:id="@+id/rbtn_gender_non_binary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/background_radiobuttons"
                android:button="@null"
                android:text="@string/non_binary"
                android:gravity="center"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="20sp"
                android:stateListAnimator="@animator/buttons_ontouch_animator"
                android:foreground="@drawable/foreground_on_view_press_dark"
                android:textColor="@color/radiobutton_text_color"
                tools:checked="true"

                />

        </RadioGroup>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_85"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>