<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/ColorPrimaryWhite"
    tools:context=".fragments.authenticationScreens.loginScreens.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/publica_play_regular"
            android:text="@string/password_recovery"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_95"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_5"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_10">

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/publica_play_regular"
            android:gravity="start|center"
            android:text="@string/e_mail"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintDimensionRatio="6:1"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_user_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="start|center"
            android:paddingHorizontal="0dp"
            android:paddingVertical="0dp"
            app:boxBackgroundColor="#c7bcb2"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintDimensionRatio="6:1"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:inputType="textEmailAddress"
                android:padding="0dp"
                android:textSize="24sp"
                android:textStyle="bold" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="start|center"
            android:text="@string/reset_link_be_sent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_user_email" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="6.5:1"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_95"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_5"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:enabled="false"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToOutline="true"
            android:background="@drawable/background_btn_corners"
            android:stateListAnimator="@animator/buttons_ontouch_animator"
            android:foreground="@drawable/foreground_on_view_press_dark"
            android:text="@string/send_link"
            android:textAllCaps="false"
            android:textColor="#4f4043"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="2.5:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

